[tool.poetry]
name = "molecule-kind"
version = "0.1.0"
description = "molecule-kind - Molecule Kind Driver allows Molecule users to test Ansible code using Kind."
authors = [
    "John Dewey <john@dewey.ws>",
]
maintainers = [
    "John Dewey <john@dewey.ws>",
]
readme = "README.md"
homepage = "https://github.com/retr0h/molecule-kind"
repository = "https://github.com/retr0h/molecule-kind"
documentation = "https://github.com/retr0h/molecule-kind"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",

    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",

    "License :: OSI Approved :: MIT License",

    "Natural Language :: English",

    "Operating System :: OS Independent",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",

    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
keywords = [
    "ansible",
    "kind",
    "k8s",
    "kubernetes",
    "testing",
    "molecule",
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
ansible = "*"
black = "^20.8b1"
coverage = {extras = ["toml"], version = "*"}
flake8 = "*"
hacking = "*"
isort = "*"
molecule = "*"
pytest = "^6.0.1"
pytest-clarity = "*"
pytest-cov = "*"
pytest-helpers-namespace = "*"
yamllint = "*"

[build-system]
requires = [
    "poetry>=0.12",
]
build-backend = "poetry.masonry.api"

[tool.poetry.plugins]
[tool.poetry.plugins."molecule.driver"]
kind = "molecule_kind.driver:Kind"

[tool.black]
line-length = 79
include = '\.pyi?$'
skip-string-normalization = true

[tool.pytest.ini_options]
testpaths = [
    "molecule_kind/test/",
]
addopts = "-v -rxXs"

[tool.coverage.run]
omit = []

[tool.coverage.report]
fail_under = 100

[tool.isort]
force_single_line = true
